--- a/portfolio_homepage_styles.css
+++ b/portfolio_homepage_styles.css
@@ -58,7 +58,7 @@ p {
     width: 100%;
     height: 100%;
     max-width: 1400px;
-    padding: 0 10px;
+    padding: 0 30px 0 20px;
 }
 #header .nav-list ul {
     list-style: none;
